--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -31,7 +31,7 @@
 }
 
 .main-section {
-  color: #fff;
+  color: #aee5d8;
   text-align: center;
   position: relative;
   top: -4em;
@@ -105,6 +105,7 @@
   margin-bottom: 0.5em;
   font-weight: 700;
   font-size: 2.25rem;
+  color: #aee5d8;
 }
 
 .sub-heading {
