--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -39,78 +39,27 @@
 
 .hero .arrow {
   position: absolute;
-  left: 50%;
-  bottom: 40px;
+  left: 48%;
+  bottom: 50px;
   cursor: pointer;
-  font-size: 2rem;
-  padding: 0.2em;
-  color: #fff !important;
+  font-size: 2.5rem;
+  padding: 0.5em;
 }
 
 .hero .arrow-active {
   display: none;
 }
 
-.markets-title {
-  text-align: center;
-}
-
-.market-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(16rem, 18rem));
-  grid-gap: 1em;
-  justify-content: center;
-}
-
-.market-grid .footer {
-  justify-content: space-between;
-  align-items: center;
-}
-
-.market-grid .location {
-  padding: 0.4em;
-}
-.btn {
-  display: inline-block;
-  padding: 0.5em 1.5em;
-  font-size: 0.75rem;
-  text-transform: uppercase;
-  font-weight: 900;
-  letter-spacing: 1px;
-  border: 0;
-  cursor: pointer;
-  margin-right: 1em;
-}
-
-.btn-primary {
-  background: linear-gradient(to left, #07393c, #0d5d56);
-  color: #48bf84;
-  transform: scale(1);
-  transition: transform 250ms;
-}
-
-.btn-primary:hover,
-.btn-primary:focus {
-  transform: scale(1.1);
-}
-.btn-primary:active {
-  transform: scale(0.9);
-}
-
-.action button:last-child {
-  margin-right: 0;
-}
-
 .heading {
   margin-bottom: 0.5em;
   font-weight: 700;
-  font-size: 2.25rem;
+  font-size: 5rem;
   color: #aee5d8;
 }
 
 .sub-heading {
   margin-bottom: 1em;
-  font-size: 1.3125rem;
+  font-size: 2rem;
   letter-spacing: 2px;
 }
 
@@ -120,15 +69,13 @@
   grid-gap: 2em;
 }
 
-.market {
-  border: 1px solid black;
-  padding: 8em 5em;
+.market-grid a {
+  color: #465775;
 }
 
-.title {
-  grid-column: 1/-1;
-  text-align: center;
-  margin-top: 1em;
+.market-grid a:hover {
+  color: inherit;
+  text-decoration: none;
 }
 
 @media (min-width: 800px) {
@@ -145,4 +92,65 @@
     grid-template-columns: minmax(1em, 1fr) minmax(1em, 1fr) minmax(1em, 1fr);
     grid-gap: 2em;
   }
+}
+
+.market {
+  border: 1px solid #e4e4e4;
+  border-radius: 4px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 18em 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  transition: box-shadow 0.3s ease;
+}
+
+@media (max-width: 500px) {
+  .market {
+    grid-template-rows: 13em 1fr;
+  }
+}
+
+.market:hover {
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05) !important;
+}
+
+.markets-title {
+  text-align: center;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+
+.market .title {
+  width: 100%;
+  text-transform: capitalize;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.market-image {
+  display: block;
+}
+
+.market-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.market-body {
+  width: 100%;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.market-footer {
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1em;
 }
