adds styles for the pagination component and foo category text on cards

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -154,3 +154,13 @@
   justify-content: space-between;
   margin-top: 1em;
 }
+
+.pagination {
+  grid-column: 1/-1;
+  justify-self: center;
+  margin-bottom: 2em;
+}
+
+.food-cat {
+  text-transform: capitalize;
+}
