--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -31,6 +31,9 @@
 }
 
 .main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: #aee5d8;
   text-align: center;
   position: relative;
@@ -39,7 +42,8 @@
 
 .hero .arrow {
   position: absolute;
-  left: 48%;
+  left: 50%;
+  margin-left: -40px;
   bottom: 50px;
   cursor: pointer;
   font-size: 2.5rem;
@@ -51,16 +55,22 @@
 }
 
 .heading {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.25em;
   font-weight: 700;
-  font-size: 5rem;
+  font-size: 3rem;
   color: #aee5d8;
+  line-height: 1;
 }
 
 .sub-heading {
   margin-bottom: 1em;
-  font-size: 2rem;
+  font-size: 1rem;
   letter-spacing: 2px;
+  line-height: 1;
+}
+
+.action {
+  margin-top: 1em;
 }
 
 .market-grid {
@@ -83,6 +93,17 @@
     display: grid;
     grid-template-columns: minmax(1em, 1fr) minmax(1em, 1fr);
     grid-gap: 2em;
+  }
+
+  .heading {
+    margin-bottom: 0.25em;
+
+    font-size: 5rem;
+  }
+
+  .sub-heading {
+    font-size: 1.5rem;
+    letter-spacing: 1px;
   }
 }
 
