--- a/src/pages/home/modal.css
+++ b/src/pages/home/modal.css
@@ -13,7 +13,8 @@
 .hero-btn {
   background: linear-gradient(to left, #07393c, #0d5d56);
   color: #48bf84;
-  font-size: 1.1rem;
+  font-size: 0.625rem;
+
   transform: scale(1);
   transition: transform 250ms;
 }
@@ -30,4 +31,10 @@
 
 .action button:last-child {
   margin-right: 0;
+}
+
+@media (min-width: 600px) {
+  .hero-btn {
+    font-size: 1rem;
+  }
 }
