--- a/src/pages/single-market/style.css
+++ b/src/pages/single-market/style.css
@@ -81,6 +81,7 @@ general layout
   display: grid;
   grid-template-columns: minmax(1em, 1fr) minmax(0px, 500px) minmax(1em, 1fr);
   grid-column-gap: 2em;
+
   margin-top: 2em;
 }
 
@@ -106,12 +107,20 @@ template-page
 .main-image {
   margin-bottom: 1.5em;
   box-shadow: 5px 5px 0 black, 10px 10px 0 #aee5d8;
-  background-image: url('../../static/images/dummy.jpg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: #1a290e;
-  background-attachment: fixed;
+  position: relative;
+  height: 8em;
+  width: 13em;
+}
+
+.carousel-image {
+  width: 100%;
+  height: 100%;
+}
+
+.carousel-image > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media (min-width: 600px) {
@@ -125,9 +134,34 @@ template-page
   .secondary-text {
     order: 2;
   }
+  .desc {
+    grid-row: 6 / span 2;
+  }
+
+  .map-container {
+    grid-column: 3 / span 1;
+  }
+}
+
+.carets {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: aliceblue;
 }
 
 .carousel-icon {
   color: #aee5d8;
   cursor: pointer;
+}
+.carousel-icon:hover,
+.carousel-icon:focus {
+  color: #264653;
+}
+
+.map {
+  max-width: 500px;
+  height: 50vh;
+  position: relative;
+  margin-bottom: 1em;
 }
